--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -31,7 +31,7 @@ nav .menu-icon {
 nav .logo-container a {
   font-weight: 700;
   font-size: 2rem;
-  color: var(--primary-color);
+  color: var(--text-2);
   text-decoration: none;
 }
 nav .nav-items {
@@ -42,7 +42,7 @@ nav .nav-items {
 }
 nav .nav-items .nav-item {
   display: block;
-  color: var(--primary-color) !important;
+  color: var(--text-2) !important;
   text-decoration: none;
   font-size: 1.2rem;
   padding: 0.7rem 1rem;
@@ -65,19 +65,19 @@ nav .nav-items .active::after {
   content: "";
   display: block;
   width: 100%;
-  background: var(--primary-color);
+  background: var(--text-2);
 }
 nav .nav-items .active:hover::after,
 nav .nav-items .nav-item:hover::after {
   content: "";
   width: 100%;
   display: block;
-  background: var(--primary-color);
+  background: var(--text-2);
 }
 nav .nav-items .contact .btn,
 .side-nav-items .btn {
-  color: var(--primary-color);
-  border: solid 2px var(--primary-color);
+  color: var(--text-2);
+  border: solid 2px var(--text-2);
   font-size: 1.2rem;
   border-radius: 0.5rem;
   margin-top: 0.4rem;
@@ -92,7 +92,7 @@ nav .toggle-dark-mode {
   width: 2.5rem;
   margin-top: 0.4rem;
   margin-left: 1rem;
-  color: var(--primary-color);
+  color: var(--text-2);
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -121,11 +121,11 @@ nav .toggle-dark-mode {
   flex-direction: column;
   font-size: 1.2rem;
   text-decoration: none;
-  color: var(--primary-color);
+  color: var(--text-2);
 }
 .side-nav-items .active {
   background: var(--side-navbar-bg-active);
-  border-right: solid 2px var(--primary-color);
+  border-right: solid 2px var(--text-2);
 }
 .side-nav-items .contact {
   width: 100%;
